--- a/server/templates/group/membership-btn.hbs
+++ b/server/templates/group/membership-btn.hbs
@@ -1,11 +1,11 @@
 {{#if membership}}
 <form action="/api/v1/group/{{groupId}}/leave?redirectTo={{locals.req.url}}" method="post">
-  <button class="btn btn-danger">{{t 'group.leave'}}</button>
+  <button class="btn btn-sm btn-danger">{{t 'group.leave'}}</button>
 </form>
 {{else}}
 {{#ifCond privacity 'public'}}
 <form action="/api/v1/group/{{groupId}}/join?redirectTo={{locals.req.url}}" method="post">
-  <button class="btn btn-success">{{t 'group.join'}}</button>
+  <button class="btn btn-sm btn-success">{{t 'group.join'}}</button>
 </form>
 {{/ifCond}}
 {{/if}}
