--- a/server/templates/post/highlight-btn.hbs
+++ b/server/templates/post/highlight-btn.hbs
@@ -3,7 +3,7 @@
   <input name="redirectTo" type="hidden" value="{{locals.req.url}}">
   <input name="highlighted" type="hidden" value="false">
   <div class="input-group">
-    <button class="btn btn-default">{{t 'post.unhighlight'}}</button>
+    <button class="btn btn-sm btn-default">{{t 'post.unhighlight'}}</button>
   </div>
 </form>
 {{else}}
@@ -11,7 +11,7 @@
   <input name="redirectTo" type="hidden" value="{{locals.req.url}}">
   <input name="highlighted" type="hidden" value="true">
   <div class="input-group">
-    <button class="btn btn-default">{{t 'post.highlight'}}</button>
+    <button class="btn btn-sm btn-default">{{t 'post.highlight'}}</button>
   </div>
 </form>
 {{/if}}
