--- a/server/templates/post/teaser.hbs
+++ b/server/templates/post/teaser.hbs
@@ -1,9 +1,13 @@
 <div id="post-teaser-{{record.id}}" class="post-teaser {{#if record.highlighted}}highlighted{{/if}}">
   <div class="post-header">
     <div class="post-creator">
-    {{we-avatar id=record.creatorId style=style}}
-    {{record.creator.displayName}}</div>
-    <div class="post-date">{{we-time-ago record.createdAt locals=locals}}</div>
+      {{#link-to 'user.findOne' record.creatorId}}
+      {{we-avatar id=record.creatorId style='thumbnail' width="50px" height="50px"}}
+      <strong>{{record.creator.displayName}}</strong>
+      {{/link-to}}
+      <small>@{{record.creator.username}}</small>
+      - <span class="post-date">{{we-time-ago record.createdAt locals=locals}}</span>
+    </div>
   </div>
 
   <div class="post-body">{{{record.body}}}</div>
@@ -15,7 +19,7 @@
         {{we-image-fancybox this 'large'}}
       {{/each}}
     {{else}}
-      {{we-fancybox-galery images=images id=record.id style="medium"}}
+      {{we-fancybox-galery images=record.images id=record.id style="medium"}}
     {{/ifCond}}
   </div>
   <script>$(function(){ $("#post-teaser-{{record.id}} > .post-images > a").fancybox(); });</script>
@@ -26,11 +30,16 @@
       {{{flag-like modelName='post' modelId=record.id isFlagged=record.metadata.isFlagged count=record.metadata.flagCount locals=locals}}}
       {{{flag-follow modelName='post' modelId=record.id isFollowing=record.metadata.isFollowing locals=locals }}}
 
-      {{{post-highlight-btn postId=record.id highlighted=record.highlighted groupId=locals.group.id locals=locals}}}
-
-      {{#link-to 'group.post.findOne' record.groupId record.id}}
-        link
-      {{/link-to}}
+      {{#if record.groupId}}
+        {{{post-highlight-btn postId=record.id highlighted=record.highlighted groupId=locals.group.id locals=locals}}}
+        {{we-action-view-btn locals.resourceName record locals.req record.groupId record.id}}
+        {{we-action-edit-btn locals.resourceName record locals.req record.groupId record.id}}
+        {{we-action-delete-btn locals.resourceName record locals.req record.groupId record.id}}
+      {{else}}
+        {{we-action-view-btn locals.resourceName record locals.req record.id}}
+        {{we-action-edit-btn locals.resourceName record locals.req record.id}}
+        {{we-action-delete-btn locals.resourceName record locals.req record.id}}
+      {{/if}}
     </div>
   </div>
 </div>
