--- a/files/public/we.group.css
+++ b/files/public/we.group.css
@@ -1,3 +1,15 @@
+.groups-menu {
+  margin: 5px 0px;
+}
+
+.groups-search form {
+  margin-bottom: 10px;
+}
+
+.groups-search label {
+  text-transform: capitalize;
+}
+
 
 .group-actions form{
   display: inline-table;
@@ -5,4 +17,17 @@
 
 .group-members {
   margin-top: 5px;
+}
+
+.group-teaser .logo {
+  float: left;
+  margin: 0px 10px 5px 0px;
+}
+
+.group-content {
+  display: table;
+}
+
+.group-actions {
+  margin-top: 8px;
 }
