--- a/server/templates/group/teaser.hbs
+++ b/server/templates/group/teaser.hbs
@@ -2,22 +2,21 @@
   <div class="group-name">
     <h3>{{#link-to 'group.findOne' record.id}}{{record.name}}{{/link-to}}</h3>
   </div>
-  <div class="group-description row">
-    <div class="col-md-2">
+  <div class="group-content">
     {{#link-to 'group.findOne' record.id}}
-      {{we-image record.logo "thumbnail" class="img-thumbnail"}}
+      {{we-image record.logo "thumbnail" class="img-thumbnail logo"}}
     {{/link-to}}
-
-    </div>
-    <div class="col-md-10">
-
     <p>{{we-strip-tags text=record.description maxLength=300}}</p>
-    </div>
   </div>
-  <div class="actions">
+  <div class="group-metadata">
     {{t record.privacity}},
-    {{record.meta.membersCount}} {{t 'group.members'}} ,
-    {{#link-to 'group.findOne' record.id}}{{t 'View'}}{{/link-to}},
+    {{record.meta.membersCount}} {{t 'group.members'}}
+  </div>
+  <div class="group-actions">
     {{{group-membership-btn groupId=record.id privacity=record.privacity membership=record.members locals=locals}}}
+    |
+    {{we-action-view-btn 'group' record locals.req record.id}}
+    {{we-action-edit-btn 'group'  record locals.req record.id}}
+    {{we-action-delete-btn 'group' record locals.req record.id}}
   </div>
 </div>
