--- a/server/templates/post/find.hbs
+++ b/server/templates/post/find.hbs
@@ -1,5 +1,10 @@
 <div class="sharebox-area">
-  <div id="sharebox-label">{{t 'sharebox.label.text'}}</div>
+  <div id="sharebox-label">
+    <button type="button" class="btn btn-default">
+      <span class="glyphicon glyphicon-pencil"></span>
+    </button>
+    {{t 'sharebox.label.text'}}
+  </div>
 
   <div id="sharebox">{{{form 'post' postRecord action=createPostUrl}}}</div>
 
