--- a/files/public/we.post.css
+++ b/files/public/we.post.css
@@ -13,7 +13,7 @@ body.post.findOne .post-teaser {
 
 .post-teaser {,
   padding: 5px 0px;
-  margin-left: 58px;
+  margin: 5px 0px 15px 58px;
 }
 
 .highlighted {
