--- a/server/templates/group/post/find.hbs
+++ b/server/templates/group/post/find.hbs
@@ -14,7 +14,10 @@
   })</script>
 </div>
 {{/can}}
-<div class="posts">
+<div id="haveNewPosts" style="display: none" class="text-center alert alert-info" role="alert"><a href="{{req.originalUrl}}">
+  <span id="haveNewPostsCount"></span> {{t 'posts.news.count'}}
+</a></div>
+<div id="posts" class="posts">
 {{#each data}}
   {{render-record-teaser modelName='post' record=this locals=..}}
   <hr>
