add post.objectType selector

--- a/server/templates/group/post/find.hbs
+++ b/server/templates/group/post/find.hbs
@@ -1,7 +1,7 @@
 {{#can 'create_post' req.userRoleNames}}
 <div class="sharebox-area">
   <div id="sharebox-label">
-    <button type="button" class="btn btn-default">
+    <button type="button" class="btn btn-primary">
       <span class="glyphicon glyphicon-pencil"></span>
     </button>
     {{t 'sharebox.label.text'}}
