add post search and update group post templates

--- a/server/templates/group/post/find.hbs
+++ b/server/templates/group/post/find.hbs
@@ -1,29 +1,1 @@
-{{#can 'create_post' req.userRoleNames}}
-<div class="sharebox-area">
-  <div id="sharebox-label">
-    <button type="button" class="btn btn-primary">
-      <span class="glyphicon glyphicon-pencil"></span>
-    </button>
-    {{t 'sharebox.label.text'}}
-  </div>
-
-  <div id="sharebox">{{{form 'post' postRecord action=createPostUrl}}}</div>
-
-  <script>$(function(){
-    we.sharebox.init('#sharebox-label', '#sharebox');
-  })</script>
-</div>
-{{/can}}
-<div id="haveNewPosts" style="display: none" class="text-center alert alert-info" role="alert"><a href="{{req.originalUrl}}">
-  <span id="haveNewPostsCount"></span> {{t 'posts.news.count'}}
-</a></div>
-<div id="posts" class="posts">
-{{#each data}}
-  {{render-record-teaser modelName='post' record=this locals=..}}
-  <hr>
-{{else}}
-  <p>{{t 'post.find.empty'}}</p>
-{{/each}}
-</div>
-
-{{paginate count=metadata.count limit=query.limit currentPage=query.page req=req}}
+{{template 'post/find' locals=this}}
