add search form in group list

--- a/server/templates/group/find.hbs
+++ b/server/templates/group/find.hbs
@@ -12,6 +12,21 @@
   </ul>
 </div>
 {{/if}}
+
+<div class="groups-search">
+  <form class="form-inline" method="get">
+    <div class="form-group">
+      <label for="groups-search">{{t 'group.search.title'}}</label>
+      <input name="name" type="text" class="form-control" id="groups-search" value="{{req.query.name}}">
+    </div>
+
+    <div class="form-group">
+      <button class="btn btn-primary">{{t 'Search'}}</button>
+    </div>
+    <input name="my" type="hidden" value="{{req.query.my}}">
+  </form>
+</div>
+
 <div class="groups">
 {{#each data}}
   {{render-record-teaser modelName='group' record=this locals=..}}
