add visibility configs in all group widgets to only show in group context

--- a/server/widgets/group-menu/view.hbs
+++ b/server/widgets/group-menu/view.hbs
@@ -1,1 +1,1 @@
-  {{!-- your widget html here... the widget object is avaible as widget variable and res.locals is avaible as locals variable --}}
+{{#if widget.menu}}{{we-menu widget.menu locals=locals}}{{/if}}
