--- a/server/templates/post/teaser.hbs
+++ b/server/templates/post/teaser.hbs
@@ -17,7 +17,9 @@
       {{/if}}
     </div>
   </div>
-
+  {{#if record.title}}
+    <div class="post-title"><h3>{{record.title}}</h3></div>
+  {{/if}}
   <div class="post-body">{{{record.body}}}</div>
 
   {{#if record.images}}
