--- a/server/templates/group/find.hbs
+++ b/server/templates/group/find.hbs
@@ -1,18 +1,6 @@
-<div class="groups-actions">{{we-action-create-btn resourceName req}}</div>
+{{template 'group/find-header'}}
 
-{{#if req.user.id}}
-<div class="groups-menu">
-  <ul class="nav nav-tabs nav-justified">
-    <li role="presentation" {{#if showAllGroups}}class="active"{{/if}}>
-    {{#link-to 'group.find'}}
-      {{t 'group.filter.all'}}</a></li>
-    {{/link-to}}
-    <li role="presentation" {{#if showUserGroups}}class="active"{{/if}}><a href="?my=true">{{t 'group.filter.my'}}</a></li>
-    <li role="presentation" {{#if showNewGroups}}class="active"{{/if}}><a href="?my=false">{{t 'group.filter.new'}}</a></li>
-  </ul>
-</div>
-{{/if}}
-
+{{#if data}}
 <div class="groups-search">
   <form class="form-inline" method="get">
     <div class="form-group">
@@ -26,6 +14,7 @@
     <input name="my" type="hidden" value="{{req.query.my}}">
   </form>
 </div>
+{{/if}}
 
 <div class="groups">
 {{#each data}}
