add user group role

--- a/server/templates/group/find.hbs
+++ b/server/templates/group/find.hbs
@@ -21,8 +21,7 @@
   {{render-record-teaser modelName='group' record=this locals=..}}
   <hr>
 {{else}}
-  <br><br>
-  <p class="text-center">{{t 'group.find.empty'}}</p>
+  <p class="text-center jumbotron">{{t 'group.find.empty'}}</p>
 {{/each}}
 </div>
 
