update membership invite feature

--- a/server/emails/GroupMembershipinvite/en-us/html.handlebars
+++ b/server/emails/GroupMembershipinvite/en-us/html.handlebars
@@ -1,1 +1,12 @@
-TODO
+<p>Hi {{site.name}},</p>
+
+<p>{{inviter.displayName}} invited you to <a href="{{groupURL}}">{{group.name}}</a> group</p>
+
+<p>
+  <a text="Accept link" href="{{acceptURL}}">Click here</a> or copy and paste the link below to accept you invite:
+
+  <b>Accept link:</b> {{acceptURL}}
+</p>
+
+Cheers,
+{{we.config.appName}} team
