--- a/server/emails/GroupMembershipinvite/en-us/text.handlebars
+++ b/server/emails/GroupMembershipinvite/en-us/text.handlebars
@@ -1,1 +1,12 @@
-TODO
+Hi {{site.name}},
+
+{{inviter.displayName}} invited you to {{group.name}} group.
+
+Copy and paste the link below to accept you invite:
+
+{{acceptURL}}
+
+Group: {{groupURL}}
+
+Cheers,
+{{we.config.appName}} team
