--- a/server/templates/membershipinvite/find.hbs
+++ b/server/templates/membershipinvite/find.hbs
@@ -19,7 +19,7 @@
   <table class="table">
     <thead>
       <tr>
-        <th>{{t 'id'}}</th>
+        <th>{{t 'name'}}</th>
         <th>{{t 'email'}}</th>
       </tr>
     </thead>
