--- a/files/public/we.group.css
+++ b/files/public/we.group.css
@@ -31,3 +31,16 @@
 .group-actions {
   margin-top: 8px;
 }
+
+.member-avatar img {
+  float: left;
+  margin: 0px 8px 3px 0px;
+}
+
+.member-username {
+  font-weight: bold;
+}
+
+.member-name {
+
+}
