--- a/files/public/we.post.css
+++ b/files/public/we.post.css
@@ -14,6 +14,7 @@ body.post.findOne .post-teaser {
 .post-teaser {,
   padding: 5px 0px;
   margin: 5px 0px 15px 5px;
+  background-color: #fff;
 }
 
 .highlighted {
