--- a/server/templates/post/sharebox.hbs
+++ b/server/templates/post/sharebox.hbs
@@ -1,4 +1,4 @@
-{{#can 'create_post' req.userRoleNames}}
+{{#can permission='create_post' roleNames=req.userRoleNames}}
 <div class="sharebox-area">
   <div id="sharebox-label">
     <button type="button" class="btn btn-primary">
