--- a/server/templates/membership/findMembers.hbs
+++ b/server/templates/membership/findMembers.hbs
@@ -25,21 +25,23 @@
               }}}
             {{/ifCond}}
           </div>
-          <div>
-            {{#we-contains roles 'manager'}}
-              <form action="/group/{{groupId}}/member/{{userId}}/removeRole" method="post">
-                <input type="hidden" name="redirectTo" value="{{../req.url}}">
-                <input type="hidden" name="role" value="manager">
-                <button class="btn btn-sm btn-danger">{{t 'group.member.remove.manager.role'}}</button>
-              </form>
-            {{else}}
-              <form action="/group/{{groupId}}/member/{{userId}}/addRole" method="post">
+          {{#can permission='manager_group' roleNames=../req.userRoleNames}}
+            <div>
+              {{#we-contains roles 'manager'}}
+                <form action="/group/{{groupId}}/member/{{userId}}/removeRole" method="post">
                   <input type="hidden" name="redirectTo" value="{{../req.url}}">
-                <input type="hidden" name="role" value="manager">
-                <button class="btn btn-sm btn-success">{{t 'group.member.add.manager.role'}}</button>
-              </form>
-            {{/we-contains}}
-          </div>
+                  <input type="hidden" name="role" value="manager">
+                  <button class="btn btn-sm btn-danger">{{t 'group.member.remove.manager.role'}}</button>
+                </form>
+              {{else}}
+                <form action="/group/{{groupId}}/member/{{userId}}/addRole" method="post">
+                    <input type="hidden" name="redirectTo" value="{{../req.url}}">
+                  <input type="hidden" name="role" value="manager">
+                  <button class="btn btn-sm btn-success">{{t 'group.member.add.manager.role'}}</button>
+                </form>
+              {{/we-contains}}
+            </div>
+          {{/can}}
         </div>
       </td>
     </tr>
@@ -53,5 +55,7 @@
     </tr>
   {{/each}}
 </tbody>
-
 </table>
+<div>
+  {{paginate count=metadata.count limit=query.limit currentPage=query.page req=req}}
+</div>
