update post group permission names

--- a/server/templates/post/sharebox.hbs
+++ b/server/templates/post/sharebox.hbs
@@ -1,5 +1,5 @@
 {{#if group.id}}
-  {{#can permission='create_post_in_group' roleNames=req.userRoleNames}}
+  {{#can permission='create_group.post' roleNames=req.userRoleNames}}
   <div class="sharebox-area">
     <div id="sharebox-label">
       <button type="button" class="btn btn-primary">
