--- a/server/templates/group/find.hbs
+++ b/server/templates/group/find.hbs
@@ -1,26 +1,27 @@
 {{template 'group/find-header'}}
+<div class="tab-content">
+  <div class="groups-search">
+    <form class="form-inline" method="get">
+      <div class="form-group">
+        <label for="groups-search">{{t 'group.search.title'}}</label>
+        <input name="name" type="text" class="form-control" id="groups-search" value="{{req.query.name}}">
+      </div>
 
-<div class="groups-search">
-  <form class="form-inline" method="get">
-    <div class="form-group">
-      <label for="groups-search">{{t 'group.search.title'}}</label>
-      <input name="name" type="text" class="form-control" id="groups-search" value="{{req.query.name}}">
-    </div>
+      <div class="form-group">
+        <button class="btn btn-primary">{{t 'Search'}}</button>
+      </div>
+      <input name="my" type="hidden" value="{{req.query.my}}">
+    </form>
+  </div>
 
-    <div class="form-group">
-      <button class="btn btn-primary">{{t 'Search'}}</button>
-    </div>
-    <input name="my" type="hidden" value="{{req.query.my}}">
-  </form>
+  <div class="groups">
+  {{#each data}}
+    {{render-record-teaser modelName='group' record=this locals=..}}
+    <hr>
+  {{else}}
+    <p class="text-center jumbotron">{{t 'group.find.empty'}}</p>
+  {{/each}}
+  </div>
+
+  {{paginate count=metadata.count limit=query.limit currentPage=query.page req=req}}
 </div>
-
-<div class="groups">
-{{#each data}}
-  {{render-record-teaser modelName='group' record=this locals=..}}
-  <hr>
-{{else}}
-  <p class="text-center jumbotron">{{t 'group.find.empty'}}</p>
-{{/each}}
-</div>
-
-{{paginate count=metadata.count limit=query.limit currentPage=query.page req=req}}
