--- a/server/widgets/group-newest/view.hbs
+++ b/server/widgets/group-newest/view.hbs
@@ -1,6 +1,6 @@
 {{#ifCond widget.layout "home"}}
   <div class="container">
-    <div class="row centered">
+    <div class="row">
       {{#each widget.groups}}
         <div class="col-md-3">
           <div class="thumbnail">
